RESOLVED FIXED56181
[Qt] Entering fullscreen and leaving it may hide the cursor of the application.
https://bugs.webkit.org/show_bug.cgi?id=56181
Summary [Qt] Entering fullscreen and leaving it may hide the cursor of the application.
Alexis Menard (darktears)
Reported 2011-03-11 05:39:14 PST
Steps to reproduce : - Open QtTestBrowser - Go to tiny.cc/wkmedia - Play a video - Enter fullscreen and leave it quickly The mouse stop to be visible inside QtTestBrowser.
Attachments
Patch to fix the issue (1.36 KB, patch)
2011-03-11 05:42 PST, Alexis Menard (darktears)
no flags
Alexis Menard (darktears)
Comment 1 2011-03-11 05:42:27 PST
Created attachment 85464 [details] Patch to fix the issue
Ariya Hidayat
Comment 2 2011-03-11 08:56:36 PST
Comment on attachment 85464 [details] Patch to fix the issue LGTM.
WebKit Commit Bot
Comment 3 2011-03-11 10:24:48 PST
Comment on attachment 85464 [details] Patch to fix the issue Clearing flags on attachment: 85464 Committed r80860: <http://trac.webkit.org/changeset/80860>
WebKit Commit Bot
Comment 4 2011-03-11 10:24:54 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.