Source/WebKit/qt/WebCoreSupport/FullScreenVideoWidget.cpp
@@ -73,6 +73,7 @@ void FullScreenVideoWidget::show(QMediaPlayer* player)
 void FullScreenVideoWidget::closeEvent(QCloseEvent* event)
 {
     m_mediaPlayer = 0;
+    m_cursorTimer.stop();
     setMouseTracking(false);
     releaseMouse();
     QApplication::restoreOverrideCursor();
